--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open",
-    "create": "webpack"
+    "create": "webpack",
+    "build": "SET NODE_ENV='production' && webpack"
   },
   "keywords": [],
   "author": "",
